Implemented Categories,Added SVG header & dropdown

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,3 +62,25 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.custom-shape-divider-top-1644159308 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  z-index: -1;
+}
+
+.custom-shape-divider-top-1644159308 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 187px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1644159308 .shape-fill {
+  fill: #1f2937;
+}
