Add Theme Switcher

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,7 +17,7 @@ body {
     //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
     // background: #D3D3D3;
     // background-color: #0e141b;
-    background-color: #111827;
+    // background-color: #faeee7;
     position: fixed;
     left: 0;
     top: 0;
@@ -26,6 +26,13 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
   }
+}
+.dark body {
+  background-color: #16161a;
+}
+
+.light body {
+  background-color: #faeee7;
 }
 
 .text-shadow {
@@ -70,7 +77,7 @@ a {
   width: 100%;
   overflow: hidden;
   line-height: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 .custom-shape-divider-top-1644159308 svg {
@@ -82,5 +89,9 @@ a {
 }
 
 .custom-shape-divider-top-1644159308 .shape-fill {
+  fill: #fffffe;
+}
+
+.dark .custom-shape-divider-top-1644159308 .shape-fill {
   fill: #1f2937;
 }
